# streamlit-analytics2

./: .gitignore  Pipfile  pyproject.toml  setup.py  tree
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
examples/: minimal.py  requirements.txt
examples/pages/: all-widgets.py  sharing-demo.py
path/to/: file.json
src/streamlit_analytics2/: __init__.py  display.py  main.py
streamlit_analytics2/: __init__.py
tests/: run_checks.sh  test_utils.py
